Test broken image header.

--- a/_posts/2018-05-25-Crime.md
+++ b/_posts/2018-05-25-Crime.md
@@ -1,5 +1,5 @@
 <p align="center">
-	<img src="../images/readme/crime_project_header.png" alt="header_image" width="100%"> 
+	<img src="{{ site.url }}/assets/project3/crime_project_header.png" alt="header_image" width="100%"> 
 </p>
 
 ## Introduction
@@ -11,8 +11,10 @@ In this project, I created a web application that receives an address or locatio
 ## Data Source
 
 The <a href="https://data.cityofchicago.org/Public-Safety/Crimes-2001-to-present/ijzp-q8t2/data" target="_blank">data</a> is Chicago crime dataset from City of Chicago Data Portal. I used ~1.5 years of data (2017 and 5 months of 2018) for computation efficiency reasons, this gives about 350K crime reports. Each crime has 22 columns of information associated with it. Information like location of the crime, crime and location descriptions, type and date of crime, arrest made or not, etc.
-
+<!--
 <img src="../images/readme/crime_project_data.png" alt="header_image" width="100%"> 
+-->
+![alt_text](../images/readme/crime_project_data.png)
 
 ### Data pre-processing
 
@@ -29,34 +31,41 @@ The data was split into training and testing sets. 80% of data assigned for lear
 ## Feature Selection
 
 The more relevant features picked for predicting crimes in which arrest was made (and therefore predicting safety) are crime date and time (day, month, year, hour, minutes) and crime location (latitude and longitude). In future work, I would add the ability to classify the crime-type in addition to possiblity of crime (safety) at a specific location and time.
-
+<!--
 <img src="../images/readme/crime_project_features.png" alt="header_image" width="100%">
-
-
+-->
+![alt_text](../images/readme/crime_project_features.png)
 
 ## Modeling
 
 I did grid search modeling, prediction and evaluation using different machine learning algorithms, namely: Logistic Regression, Naive Bayes, Support Vector Machines, K-Nearest Neighbors, Decision Trees, Random Forest, and XG-Boosting. From the grid search the best parameters were used to fit each model and use them to predict and evaluate their performance. The results are summarized in the table below:
-
+<!--
 <img src="../images/readme/crime_project_models.png" alt="header_image" width="100%"> 
+-->
+![alt_text](../images/readme/crime_project_models.png)
 
 By comparing the models, the model I selected for this classification task is XG-Boost. This model gives the best performance metrics across all categories (precision, recall, F1 score, and accuracy) and although in terms of training and testing speed is not the fastest algorithm but it's not the slowest either. Here are more detail on the XG-Boost classification on arrest made or not:
 
-<img src="../images/readme/crime_project_selected_model.png" alt="header_image" width="100%">
+<!--<img src="../images/readme/crime_project_selected_model.png" alt="header_image" width="100%">-->
+![alt_text](../images/readme/crime_project_selected_model.png)
 
 ## Getting Started
 
 When you load the application, you have two options: One is to enter the location and datetime arguments in this format (day, hour, latitude, longitude, minute, month) and click the "is it safe?" button. This will return the probability of safety (crime with arrest not happening). For example in the case below user searched for West Ridge area (west side of Chicago) and predicted 0.04 chance of safety or 96% chance of crime at that time, date and location.  
 
-<p align="center">
+<!--<p align="center">
 	<img src="../images/readme/crime_project_demo1.png" alt="demo_image" width="75%">
 </p>
+-->
+![alt_text](../images/readme/crime_project_demo1.png)
 
 Two is to enter your desired address in the search box, Google will automatically complete the address. Click the "find the crimes" button. The page will center and zoom in the map, marking all the crimes within 100 meters radius in the area. Hover over the markers to find more information about the crime such as, description, block and date of the crime incident. You can select the 'Street View' to look and move around for better visualization of the incidents. To see the complete results list, click on the 'View Results List' button on the page. The application will also save the last three searches, you can see the previous searches by clicking on the 'Previous Searches' button.
 
-<p align="center">
+<!--<p align="center">
 	<img src="../images/readme/crime_project_demo2.png" alt="demo_image" width="75%">
 </p>
+-->
+![alt_text](../images/readme/crime_project_demo2.png)
 
 ## What's included
 
@@ -156,7 +165,7 @@ jupyter notebook file-name
 
 ## Built With
 
-* Python  <img src="../images//readme/python_logo.svg?raw=true" alt="python_logo" width="20px">
+* Python  <!--<img src="../images//readme/python_logo.svg?raw=true" alt="python_logo" width="20px">--> ![alt_text](../images//readme/python_logo.svg?raw=true?width=20px)
 * HTML <img src="../images//readme/HTML.png?raw=true" alt="html_logo" width="22px">
 * CSS <img src="../images//readme/CSS.png?raw=true" alt="css_logo" width="16px">
 * JS <img src="../images//readme/JS.jpg?raw=true" alt="js_logo" width="20px">
