Test broken image header again

--- a/_posts/2018-05-25-Crime.md
+++ b/_posts/2018-05-25-Crime.md
@@ -1,7 +1,8 @@
-<p align="center">
-	<img src="{{ site.url }}/assets/project_crime/crime_project_header.png" alt="header_image" width="100%"> 
-</p>
+<!--<p align="center">
+	<img src="{{site.url}}/assets/project_crime/crime_project_header.png" alt="header_image" width="100%"> 
+</p>-->
 
+![image-title-here](./assets/project_crime/crime_project_header.png){:class="img-responsive"}
 ## Introduction
 
 The main goal of this project is prediction of safety at a specific location and a particular time. Crimes are a common social problem affecting the quality of life and the economic growth of a society [1]. It is considered an essential factor that determines whether or not people move to a new city and what places should be avoided when they travel [2]. With the increase of crimes, law enforcement agencies are continuing to demand advanced geographic information systems and new data mining approaches to improve crime analytics and better protect their communities [3].
@@ -66,43 +67,6 @@ Two is to enter your desired address in the search box, Google will automaticall
 </p>
 -->
 ![alt_text](../images/readme/crime_project_demo2.png)
-
-## What's included
-
-Within the project folder you can find the following directories and files. You'll see something like this:
-
-```
-safeinthecity/
-├── templates/
-│  	└── index.html/
-├── static/
-│  	└── assets/
-│		 └── css/
-│		 │   ├── reset.css
-│	 	 │   └──  style.css	
-│		 └── js/
-│			 ├── crime-api.js
-│			 └── google-map-api.js
-├── api.py
-├── app.py (flask app)
-├── scaler.pkl
-├── xgboost.pkl 
-├── crime_model.ipynb (main notebook)
-├── requirements.txt
-├── README.md
-└── readme
-	└── python_logo.png
-	└── flask.png
- 	└── css.png
- 	└── html.png
-	└── js.png
-	└── git.png
-	└── firebase.png
-	└── terminal.png
-	└── chicagoapi.png
-	└── mapsapi.png
-	└── numpy_logo.png
-```
 
 ## Contributing
 
