Test broken image header again

--- a/_posts/2018-05-25-Crime.md
+++ b/_posts/2018-05-25-Crime.md
@@ -2,7 +2,8 @@
 	<img src="{{site.url}}/assets/project_crime/crime_project_header.png" alt="header_image" width="100%"> 
 </p>-->
 
-![image-title-here](./assets/project_crime/crime_project_header.png){:class="img-responsive"}
+![image-title-here]({{ site.url }}/assets/project_crime/crime_project_header.png)
+
 ## Introduction
 
 The main goal of this project is prediction of safety at a specific location and a particular time. Crimes are a common social problem affecting the quality of life and the economic growth of a society [1]. It is considered an essential factor that determines whether or not people move to a new city and what places should be avoided when they travel [2]. With the increase of crimes, law enforcement agencies are continuing to demand advanced geographic information systems and new data mining approaches to improve crime analytics and better protect their communities [3].
