fixed image ref link

--- a/_posts/2018-05-25-Crime.md
+++ b/_posts/2018-05-25-Crime.md
@@ -1,6 +1,6 @@
-<!--<p align="center">
-	<img src="{{site.url}}/assets/project_crime/crime_project_header.png" alt="header_image" width="100%"> 
-</p>-->
+<p align="center">
+	<img src="{{site.url}}/images/project_crime/crime_project_header.png" alt="header_image" width="100%"> 
+</p>
 
 ![image-title-here]({{ site.url }}/images/crime_project_header.png)
 <!--![My helpful screenshot]({{ "../assets/project_crime/crime_project_header.png" | absolute_url }})-->
